EDSC-1636 Support for previous saved projects. Fix issue that incorrect state is pushed to address bar when url is too long. CSS changes.

--- a/app/assets/stylesheets/modules/projects.css.scss
+++ b/app/assets/stylesheets/modules/projects.css.scss
@@ -93,4 +93,14 @@
     height: 65px;
   }
 
+  i.save-success, i.after-save {
+    display: none;
+    color: #2ecc71;
+  }
+
+  .save-project {
+    float: right;
+  }
+
+
 }
